fixed vertical  spacing between posts

--- a/instagram/src/App.css
+++ b/instagram/src/App.css
@@ -26,5 +26,7 @@ time, mark, audio, video {
   width: 100%;
   height: 100%;
   margin: 0 auto;
+  display: flex;
+  flex-direction: column;
   //text-align: center;
 }
